# SysMon

./: Cargo.toml
src/: main.rs
src/sysdata/: cpu.rs  mem.rs  mod.rs  processes.rs
